--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
   background-color: #101820;
-  position: fixed;
 }
 
 .fp-watermark {
@@ -16,7 +15,7 @@ body {
 .navbar {
   position: relative;
   z-index: 1;
-  margin-top: -60px;
+  margin-top: -320px;
 }
 
 .nav-item {
@@ -38,12 +37,6 @@ body {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-}
-
-.nav-link:hover {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
 }
 
 /* HOME */
@@ -79,12 +72,11 @@ body {
 
 .btn-scroll {
   padding-top: 60px;
-  margin: auto;
 }
 
 /* WHAT WE DO - CARD */
 .s2 {
-  margin-top: 200px;
+  margin-top: 0px;
 }
 
 .text-wwd {
@@ -122,7 +114,7 @@ body {
 
 .card img {
   width: 100%;
-  height: 320px;
+  height: 380px;
 }
 
 .card-text {
@@ -386,15 +378,40 @@ body {
   margin-top: -80px;
 }
 
+/* SMALL PHONE */
+@media (min-width: 350px) {
+  /* NAVBAR */
+  .navbar {
+    position: relative;
+    z-index: 1;
+    margin-top: -200px;
+  }
+}
+
+/* SMALL PHONE */
+@media (min-width: 370px) {
+  /* NAVBAR */
+  .navbar {
+    position: relative;
+    z-index: 1;
+    margin-top: -330px;
+  }
+}
+
 /* TABLET/PHONE */
 @media (min-width: 576px) {
   /* NAVBAR */
   .navbar {
-    margin-top: 0px;
+    margin-top: -460px;
   }
 
   .nav-link {
     font-size: 20px;
+  }
+
+  /* WHAT WE DO */
+  .s2 {
+    margin-top: 0px;
   }
 
   /* WHY */
@@ -474,6 +491,11 @@ body {
     line-height: 24px;
   }
 
+  .btn-scroll {
+    padding-top: 60px;
+    margin: auto;
+  }
+
   /* NAVBAR */
   .nav-link {
     font-size: 24px;
@@ -491,6 +513,9 @@ body {
 
   /* CARD */
   /* WHAT WE DO - CARD */
+  .s2 {
+    margin-top: 200px;
+  }
   .text-wwd {
     font-size: 60px;
     line-height: 73px;
