--- a/css/style.css
+++ b/css/style.css
@@ -276,8 +276,9 @@ body {
 }
 
 .s4 .img-back {
-  width: 130%;
+  width: 150%;
   margin-top: -10px;
+  margin-left: -180px;
 }
 
 .s4 .img-head-prev {
