--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,7 @@ body {
   height: 38.24px;
   left: 1px;
   top: 120px;
+  bottom: 120px;
 }
 
 .img-social {
@@ -601,7 +602,6 @@ body {
 .col-social {
   margin-top: 200px;
   margin-left: -10px;
-  padding-bottom: 100px;
 }
 
 /**********************************************************************************************************************************/
