--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,205 @@ body {
     height: 480px;
     border-radius: 20px;
   }
+
+  /* Previous client */
+  .s4 .img-back {
+    width: 150%;
+    margin-top: -10px;
+    margin-left: -210px;
+  }
+
+  .s4 .img-head-prev {
+    margin-top: -150px;
+  }
+
+  /* Financial */
+
+  .s5 .img-back {
+    width: 150%;
+    margin-top: 10px;
+    margin-left: -390px;
+  }
+
+  .s5 .img-head-prev {
+    margin-top: -160px;
+    width: 200%;
+  }
+
+  .s5 .img-fluid {
+    max-width: 200%;
+  }
+
+  .s5 .container-fluid {
+    margin-top: -20px;
+  }
+
+  .fi-by {
+    position: absolute;
+    width: 101px;
+    height: 12px;
+    right: 70px;
+    bottom: 25px;
+
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+
+    color: #ffffff;
+  }
+
+  .fi-uncateg {
+    position: absolute;
+    left: 6.41%;
+    right: 5.51%;
+    top: 27.41%;
+    bottom: 27.62%;
+
+    /* Montserrat 8 */
+
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 8px;
+    line-height: 10px;
+    /* identical to box height */
+
+    color: #473e3e;
+
+    text-transform: uppercase;
+  }
+
+  .fi-div-title {
+    position: absolute;
+    width: 182px;
+    height: 51px;
+    right: 130px;
+    top: 175px;
+  }
+
+  .btn-uncateg {
+    position: absolute;
+    width: 82.88px;
+    height: 22.23px;
+    right: 230px;
+    bottom: 19.77px;
+
+    background: #ffffff;
+    border-radius: 10.1068px;
+    border-style: none;
+  }
+
+  .btn-view-more {
+    position: absolute;
+    width: 198px;
+    height: 53px;
+    top: 24px;
+  }
+
+  .img-home-grad {
+    margin: 0 0 -260px;
+    position: relative;
+    display: none;
+  }
+
+  .crop {
+    overflow: hidden;
+    margin-top: 40px;
+  }
+
+  .div-view-more {
+    margin-top: -50px;
+    height: 60px;
+  }
+
+  /* FOOTER */
+  .s6 {
+    position: relative;
+    height: 475px;
+    background: linear-gradient(180deg, #3191a1 0%, #218c66 100%);
+    border-radius: 0px;
+  }
+
+  .s6 .container {
+    margin-top: -500px;
+  }
+
+  .img-logo {
+    position: absolute;
+    width: 175px;
+    height: 126.56px;
+    margin-top: 50px;
+  }
+
+  .fo-div-title {
+    position: absolute;
+    margin-top: 220px;
+    margin-left: 40px;
+  }
+
+  .fo-title-contact {
+    margin-top: 20px;
+  }
+
+  .div-ig {
+    position: absolute;
+    width: 158.79px;
+    height: 38.24px;
+    left: 1px;
+    top: 20px;
+  }
+
+  .div-fb {
+    position: absolute;
+    width: 159.24px;
+    height: 38.24px;
+    left: 1px;
+    top: 70px;
+  }
+
+  .div-linkedin {
+    position: absolute;
+    width: 158.79px;
+    height: 38.24px;
+    top: 120px;
+  }
+
+  .img-social {
+    position: absolute;
+    width: 38.24px;
+    height: 38.24px;
+    left: 1px;
+    top: 30px;
+  }
+
+  .fo-social {
+    position: absolute;
+    width: 110px;
+    height: 20px;
+    left: 49.79px;
+    top: 38.28px;
+
+    /* Montserrat 16 */
+
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height */
+
+    color: #ffffff;
+  }
+
+  .col-contact {
+    margin-top: 0px;
+  }
+
+  .col-social {
+    margin-top: 0px;
+  }
 }
 
 /**********************************************************************************************************************************/
