update blog next page

--- a/css/style.css
+++ b/css/style.css
@@ -856,6 +856,20 @@ body {
   color: #101820;
 }
 
+/*================================================= BLOG NEXT PAGE CSS ===========================================================*/
+
+.row-blog-nextpage-small {
+  margin-top: 50px;
+}
+
+.row-blog-nextpage-small-2 {
+  margin-top: -140px;
+}
+
+.row-blog-nextpage-small-3 {
+  margin-top: -200px;
+}
+
 /**********************************************************************************************************************************/
 
 /* TABLET/PHONE */
