--- a/css/style.css
+++ b/css/style.css
@@ -890,6 +890,97 @@ body {
 
 .col-blog-nextpage-small {
   margin-top: 200px;
+  margin-bottom: 200px;
+}
+
+.row-blog-nextpage-small-2-non {
+  margin-top: -140px;
+}
+
+.s6-nextpage-non {
+  position: relative;
+  background: linear-gradient(180deg, #3191a1 0%, #218c66 100%);
+  border-radius: 0px;
+  height: 900px;
+}
+
+/*=================================================== BLOG DETAIL NON FULLPAGE ==================================================*/
+.s6-blog-detail {
+  position: relative;
+  background: linear-gradient(180deg, #3191a1 0%, #218c66 100%);
+  height: 500px;
+  margin-top: 50px;
+}
+
+.s2-blog-detail {
+  margin-top: -150px;
+}
+
+.col-blog-detail {
+  margin-top: 200px;
+}
+
+.blog-detail-date {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 40px;
+  color: #ffffff;
+}
+
+.blog-detail-title {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 39px;
+  line-height: 39px;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+.blog-detail-by {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+
+  color: #ffffff;
+}
+
+.blog-detail-tag {
+  width: auto;
+  height: 21.06px;
+
+  background: #eeeeee;
+  border-radius: 21.6622px;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #101820;
+}
+
+.blog-detail-p {
+  margin-top: 20px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: justify;
+
+  color: #ffffff;
+}
+
+.blog-detail-social {
+  display: flex;
+  align-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /**********************************************************************************************************************************/
@@ -1256,6 +1347,21 @@ body {
     position: absolute;
     margin-top: -218px;
     margin-left: 333px;
+  }
+
+  .row-blog-nextpage-small-2-non {
+    margin-top: -163px;
+  }
+
+  .s6-nextpage-non {
+    height: 600px;
+  }
+
+  .s6-blog-detail {
+    position: relative;
+    background: linear-gradient(180deg, #3191a1 0%, #218c66 100%);
+    height: 570px;
+    margin-top: 50px;
   }
 }
 
@@ -1688,7 +1794,16 @@ body {
     margin-left: 333px;
   }
 
-  .s2-blog-nextpage {
-    height: 2000px;
+  .row-blog-nextpage-small-2-non {
+    margin-top: -140px;
+  }
+
+  .s6-nextpage-non {
+    height: 475px;
+  }
+
+  .blog-detail-social {
+    display: flex;
+    justify-content: center;
   }
 }
