--- a/css/style.css
+++ b/css/style.css
@@ -165,25 +165,9 @@ body {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
-  background: -o-linear-gradient(
-      bottom,
-      rgba(23, 23, 23, 0.9),
-      rgba(23, 23, 23, 0.9)
-    ),
-    url("./img/img-cfa.png");
-  background: -webkit-gradient(
-      linear,
-      left bottom, left top,
-      from(rgba(23, 23, 23, 0.9)),
-      to(rgba(23, 23, 23, 0.9))
-    ),
-    url("./img/img-cfa.png");
-  background: linear-gradient(
-      0deg,
-      rgba(23, 23, 23, 0.9),
-      rgba(23, 23, 23, 0.9)
-    ),
-    url("./img/img-cfa.png");
+  background: -o-linear-gradient(bottom, rgba(23, 23, 23, 0.9), rgba(23, 23, 23, 0.9)), url("./img/img-cfa.png");
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(23, 23, 23, 0.9)), to(rgba(23, 23, 23, 0.9))), url("./img/img-cfa.png");
+  background: linear-gradient(0deg, rgba(23, 23, 23, 0.9), rgba(23, 23, 23, 0.9)), url("./img/img-cfa.png");
 }
 
 .card:hover::before {
@@ -254,8 +238,8 @@ body {
   position: absolute;
   left: 50%;
   -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   margin-top: -80px;
 }
 
@@ -264,8 +248,8 @@ body {
   left: 50%;
   max-width: 400px;
   -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
 
 .vertical-line {
@@ -428,11 +412,11 @@ body {
   position: absolute;
   bottom: 20px;
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   right: 20px;
   font-weight: 400;
-  font-size: .65rem;
+  font-size: 0.65rem;
   line-height: 12px;
   color: #ffffff;
 }
@@ -442,14 +426,14 @@ body {
   bottom: 20px;
   left: 20px;
   background: #ffffff;
-  padding: .75rem .5rem;
+  padding: 0.75rem 0.5rem;
   line-height: 0;
   border-style: none;
 }
 
 .fi-uncateg {
   font-weight: 500;
-  font-size: .65rem;
+  font-size: 0.65rem;
   color: #473e3e;
   text-transform: uppercase;
 }
@@ -460,13 +444,13 @@ body {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 1rem;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border-style: none;
 }
 
 .insight {
   position: relative;
-  margin: 0 .5rem 1rem;
+  margin: 0 0.5rem 1rem;
   height: 300px;
   width: 100%;
   max-width: 350px;
@@ -577,9 +561,9 @@ body {
 } */
 
 .img-social {
-  margin-right: .5rem;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-right: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .fo-social {
