--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,24 +1,24 @@
 /*================================================= BLOG NEXT PAGE CSS ===========================================================*/
 .img-main-about {
   position: absolute;
-  width: 100%;
-  left: 50%;
+  width: 300%;
+  left: -50%;
   -webkit-transform: translate(-50%, 0%);
   -ms-transform: translate(-50%, 0%);
   transform: translate(-50%, 0%);
-  margin-top: -60px;
+  margin-top: -270px;
 }
 
 .col-about-us {
-  margin-top: 200px;
+  margin-top: 180px;
 }
 
 .about-us-title {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  font-size: 40px;
-  line-height: 49px;
+  font-size: 30px;
+  line-height: 40px;
   text-align: justify;
 
   color: #ffffff;
@@ -40,7 +40,7 @@
 }
 
 .div-about-us-desc {
-  margin-top: 50px;
+  margin-top: 130px;
 }
 
 .s2-blog-detail {
@@ -48,7 +48,7 @@
 }
 
 .s3-blog-detail {
-  margin-top: 100px;
+  margin-top: -20px;
 }
 
 .carousel-number-text {
@@ -80,10 +80,9 @@
 }
 
 .carousel-line {
-  position: absolute;
   width: 154.67px;
   height: 3px;
-  top: 99.45px;
+  margin-top: 10px;
 
   background: #ffffff;
   border-radius: 8.22695px;
@@ -96,7 +95,6 @@
   font-size: 18px;
   line-height: 22px;
   text-align: justify;
-  margin-top: 30px;
 
   color: #ffffff;
 }
@@ -107,13 +105,14 @@
   height: 55px;
   border-radius: 40%;
   background-color: rgba(255, 255, 255, 0);
+  margin-right: 8px;
 }
 
 .text-indicator {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  font-size: 31.1533px;
+  font-size: 25px;
   line-height: 38px;
   color: #ffffff;
   text-align: center;
@@ -140,7 +139,7 @@
 }
 
 .carousel-inner {
-  height: 540px;
+  height: 913px;
 }
 
 .carousel-control-prev,
@@ -148,7 +147,7 @@
   width: 33px;
   height: 32px;
   background: rgba(92, 92, 92, 0.5);
-  top: 30px !important;
+  top: 10px !important;
   bottom: auto;
 }
 
